[project]
name = "django-easy-logging"
version = "0.4.0"
description = "Easy Django logging with Loguru"
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "loguru>=0.6.0"]
requires-python = ">=3.7"
license = {text = "MIT"}
readme = "README.md"

[project.urls]
homepage = "https://github.com/neutron-sync/django-easy-logging"

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "toml>=0.10.2",
    "pytest>=7.0.0",
    "yapf>=0.32.0",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"
publish = "pdm publish --username __token__ --password $PDM_PUBLISH_PASSWORD"
format = "yapf -rpi -vv ."
check_format = "yapf -rpd ."
test = "pytest test_easy_log.py"
